<resources>
    <string name="app_name">Chocal Chat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Join Chat</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_ip">Server IP</string>
    <string name="prompt_port">Server Port</string>
    <string name="action_join_chat">Join Chat</string>
    <string name="action_join_now_cap">JOIN NOW</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_ip">This ip is invalid</string>
    <string name="error_invalid_port">This port number is incorrect. Port number must be in range of 1 and 65534</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_join">Join Chat</string>
    <string name="error_cant_connect_to_chocal_server">Can\'t connect to Chocal Server.</string>
    <string name="leave_chat">Leave Chat</string>
    <string name="chocal_logo">Chocal Logo</string>
    <string name="online">Online</string>
    <string name="name">Name</string>
    <string name="status">Status</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="join_description">Join Chocal Chat to communicate with your friends.</string>
    <string name="choose_avatar">Choose Avatar</string>
    <string name="avatar_photo">Avatar Photo</string>
    <string name="select_photo">Select Photo</string>
    <string name="capture_avatar">Capture Avatar</string>
    <string name="take_photo">Take a Photo</string>
    <string name="online_users">Online Users</string>
    <string name="you_left_chat_successfully">You left the chat successfully</string>
    <string name="user_avatar">User Avatar</string>
    <string name="now_disconnected_from_chocal">You are now disconnected from Chocal Server</string>
    <string name="online_number">%1$d Online</string>
    <string name="about">About</string>
    <string name="chocal_chat_is_a_free_software_that_will_run_in_your_local_network_to_provide_a_cross_platform_solution_for_communicating_between_each_other">Chocal Chat is a free software that will run in your local network to provide a cross platform solution for communicating between each other.</string>
    <string name="developer_hesam_gholami_hesam_org">Developer: Hesam Gholami (hesam.org)</string>
    <string name="this_project_is_available_on_github_com">This project is available on github.com</string>
    <string name="all_rights_reserver_2012_2016_by_puresoftware_org">All rights reserver. 2012 – 2016 by Pure Software group</string>
    <string name="pure_soft">Pure Soft</string>
    <string name="send">Send</string>
    <string name="attachment">Attachment</string>
    <string name="type_your_message">Type your message…</string>
    <string name="select_attachment">Select Attachment</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="attachment_photo_added">Attachment photo added</string>
    <string name="message_photo">Message photo</string>
    <string name="you">You</string>
</resources>
