<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/chat_bubble_layout">

    <ImageView
        android:id="@+id/img_avatar"
        android:contentDescription="@string/avatar_photo"
        style="@style/chat_bubble_avatar"
        android:visibility="gone"/>

    <LinearLayout
        style="@style/chat_bubble_text_layout"
        android:background="@drawable/chat_bubble_self">

        <TextView
            android:id="@+id/txt_bubble_name"
            android:text="@string/you"
            style="@style/chat_bubble_name" />

        <ImageView
            android:id="@+id/img_bubble_photo"
            style="@style/chat_bubble_photo"
            android:contentDescription="@string/message_photo"
            />

        <TextView
            android:id="@+id/txt_bubble_message"
            android:text="Medium Text"
            style="@style/chat_bubble_text_message"/>

    </LinearLayout>




</LinearLayout>