<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.puresoftware.chocalandroid.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/chocal_logo"
            android:contentDescription="@string/chocal_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/chocal_chat_is_a_free_software_that_will_run_in_your_local_network_to_provide_a_cross_platform_solution_for_communicating_between_each_other"
            android:id="@+id/txt_about"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/img_logo"
            android:layout_centerHorizontal="true"
            android:autoLink="web" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/developer_hesam_gholami_hesam_org"
            android:id="@+id/txt_developer"
            android:layout_below="@+id/txt_about"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:autoLink="web" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/this_project_is_available_on_github_com"
            android:id="@+id/txt_git_hub"
            android:layout_below="@+id/txt_developer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:autoLink="web" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_pure_logo"
            android:layout_below="@+id/txt_git_hub"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/puresoft_logo"
            android:contentDescription="@string/pure_soft" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/all_rights_reserver_2012_2016_by_puresoftware_org"
            android:id="@+id/txt_about_copy"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:autoLink="web" />

    </RelativeLayout>

</ScrollView>


