<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.puresoftware.chocalandroid.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ListView
        android:id="@+id/chat_list_view"
        android:layout_width="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:layout_above="@+id/bottom_layout"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:stackFromBottom="true"/>


    <Button
        android:id="@+id/btn_send"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        style="@style/Widget.AppCompat.Button.Colored" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_send">

        <ImageButton
            android:id="@+id/img_btn_attachment"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chat_attachment"
            android:contentDescription="@string/attachment"
            android:layout_gravity="center"
            style="@style/Base.Widget.AppCompat.Button.Borderless" />

        <EditText
            android:id="@+id/txt_message"
            android:layout_weight="70"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollHorizontally="false"
            android:hint="@string/type_your_message"
            android:layout_gravity="center"
            android:inputType="textCapSentences|textMultiLine"
            android:maxHeight="100dp"/>

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_weight="20"
            android:layout_width="0dp"
            android:layout_height="@dimen/avatar_width"
            android:src="@drawable/no_avatar"
            android:contentDescription="@string/avatar_photo"/>

    </LinearLayout>





</RelativeLayout>
